update java_trick.md, fix LC 126, add dev/CharTest.java